# islands-webscraper

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
docs/: adapting-the-tool.md  api.md  architecture.md  data-model.md  islands_full_usage_guide.md  sampling-policy.md  workflows.md
examples/data-run-exhibit-a/analysis/: analysis_rows.csv  analysis_rows.jsonl
examples/data-run-exhibit-a/raw/: study_run.jsonl  village_summaries.jsonl
examples/data-run-exhibit-a/villages/village-Akkeshi/analysis/: analysis_rows.csv  analysis_rows.jsonl
examples/data-run-exhibit-a/villages/village-Akkeshi/normalized/: participants.jsonl
examples/data-run-exhibit-a/villages/village-Akkeshi/raw/: participant_collection.jsonl  processed_households.jsonl  sampling_runs.jsonl
examples/data-run-exhibit-a/villages/village-Arcadia/analysis/: analysis_rows.csv  analysis_rows.jsonl
scripts/: clean_analysis.py
src/scraper/: auth_browser.py  auth_env.py  config.py  study_profile.py
src/scraper/cli/: main.py
src/scraper/client/: endpoints.py  session.py
src/scraper/models/: analysis.py  normalized.py  pages.py  runtime.py
src/scraper/parsers/: chat.py  consent.py  house.py  islander.py  village.py
src/scraper/services/: auth.py  checkpoint.py  collection.py  data_collection.py  derivation.py  normalization.py  persistence.py  progress.py  sampling.py  workflow.py
tests/: test_chat_parser.py  test_consent_parser.py  test_derivation.py  test_house_parser.py  test_islander_parser.py  test_normalization.py  test_village_parser.py
(+46 files in other folders)
