[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "islands-webscraper"
version = "0.1.0"
description = "A scraping and data-collection utility for the Islands simulator"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ian Timchak" }
]
dependencies = [
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "pydantic>=2.7",
  "typer>=0.12",
  "python-dotenv>=1.0",
  "tenacity>=8.2",
  "browser-cookie3>=0.19",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
islands = "scraper.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]